--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write ."
-
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
