--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@tailwindcss/vite": "^4.1.12",
     "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
