--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,9 +5,7 @@
       "@/*": ["/src/*"],
       "@pages/*": ["/src/pages/*"],
       "@components/*": ["/src/components/*"],
-      "@store/*": ["/src/store"]
+      "@store/*": ["/src/store/*"]
     },
-    "noUnusedLocals": false,
-    "noUnusedParameters": false
   }
 }
