--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
+    "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "react-select": "^5.10.2",
     "recharts": "^3.1.2",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.0"
