--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
     "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.0"
