--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
       "@/*": ["/src/*"],
       "@pages/*": ["/src/pages/*"],
       "@components/*": ["/src/components/*"],
-      "@store/*": ["/src/store/*"]
+      "@store/*": ["/src/store/*"],
+      
     },
   }
 }
