--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
@@ -29,6 +30,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
     "tailwindcss": "^4.1.12",
+    "toast": "^0.5.4",
     "toastify": "^2.0.1",
     "yup": "^1.7.0"
   },
