--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.12",
     "toast": "^0.5.4",
     "toastify": "^2.0.1",
